Fixed some typos in the example. and made sure it compiles and runs. It does!

--- a/SDL_RenderCopy.mediawiki
+++ b/SDL_RenderCopy.mediawiki
@@ -44,32 +44,39 @@ int main()
   SDL_Texture* Background_Tx;
   SDL_Texture* BlueShapes;
 
+
 /*For loop counters*/
   int i;
   int n;
 
+
 /*Rects for drawing. Probably overkill, but defining too much is certainly better than errors from uninitilization*/
   SDL_Rect SrcR;
   SDL_Rect DestR;
+
 
   SrcR.x = 0;
   SrcR.y = 0;
   SrcR.w = SHAPE_SIZE;
   SrcR.h = SHAPE_SIZE;
 
+
   DestR.x = 640 / 2 - SHAPE_SIZE / 2;
   DestR.y = 580 / 2 - SHAPE_SIZE / 2;
   DestR.w = SHAPE_SIZE;
   DestR.h = SHAPE_SIZE;
 
+
 /*The creation of all the necessary stuff*/
   Main_Window = SDL_CreateWindow("SDL_RenderCopy Example", SDL_WINDOWPOS_UNDEFINED, SDL_WINDOWPOS_UNDEFINED, 640, 580, SDL_WINDOW_SHOWN);
   Main_Renderer = SDL_CreateRenderer(Main_Window, -1, SDL_RENDERER_ACCELERATED);
 
+
 /*The loading of the background texture. I think using CreateTextureFromSurface
 is the best way to do this without using SDL_image. My background of choice is a calming field picture*/
   Loading_Surf = SDL_LoadBMP("Background.bmp");
-  SDL_Texture = SDL_CreateTextureFromSurface(Main_Renderer, Loading_Surf);
+  Background_Tx = SDL_CreateTextureFromSurface(Main_Renderer, Loading_Surf);
+
 
 /*Clear the loading surface, load a new one, and creating the second texture.
 This one has a 2x2 grid of blue shapes on a black background.*/
@@ -77,6 +84,7 @@ This one has a 2x2 grid of blue shapes on a black background.*/
   Loading_Surf = SDL_LoadBMP("Blueshapes.bmp");
   BlueShapes = SDL_CreateTextureFromSurface(Main_Renderer, Loading_Surf);
   SDL_FreeSurface(Loading_Surf); //always good to free stuff as soon as you're done with it
+
 
 /*now onto the fun part. This will render a rotating selection of the blue shapes in the middle of the screen*/
   for(i=0;i<2;i++)
@@ -93,19 +101,22 @@ This one has a 2x2 grid of blue shapes on a black background.*/
         SrcR.y = 0;
       }
       SDL_RenderCopy (Main_Renderer,Background_Tx,NULL,NULL);
-      SDL_RenderCopy (Main_Renderer,BlueShapes,SrcR,DestR);
+      SDL_RenderCopy (Main_Renderer,BlueShapes,&SrcR,&DestR);
       SDL_RenderPresent(Main_Renderer);
       SDL_Delay(500);
     }
   }
 
+
 /* in my mind, I think of the renderer as a big canvis, and when you RenderCopy you are adding paint on it, each time adding it over top. You can change how it blends with the stuff that the new data goes over. If you're stuck on the whole renderer idea, coming from 1.2 surfaces and bliting, think of the renderer as your main surface, and RenderCopy as the blit function to that main surface, with RenderPresent as the old flip function.*/
+
 
   SDL_DestroyTexture(BlueShapes);
   SDL_DestroyTexture(Background_Tx);
   SDL_DestroyRenderer(Main_Renderer);
   SDL_DestroyWindow(Main_Window);
   SDL_Quit();
+
 
   return 1;
 }
