--- a/SDL_WaitThread.mediawiki
+++ b/SDL_WaitThread.mediawiki
@@ -6,7 +6,7 @@
 
 
 = SDL_WaitThread =
-Use this function to wait for a thread to finish.
+Use this function to wait for a thread to finish. As a side effect, the function will free the memory allocated to the SDL_Thread structure.
 
 
 == Syntax ==
@@ -17,7 +17,7 @@ void SDL_WaitThread(SDL_Thread* thread,
 == Function Parameters ==
 {|
 |'''thread''' 
-|The SDL_Thread point that was returned from the SDL_CreateThread call that started this thread 
+|The SDL_Thread pointer that was returned from the SDL_CreateThread call that started this thread. Note that the pointer becomes invalid after SDL_WaitThread finishes, because this function will free the memory pointed to. 
 |-
 |'''status''' 
 |Pointer to an integer that will receive the value returned from the thread function by its 'return', see [[#Remarks|Remarks]] for details 
