--- a/SDL_GetError.mediawiki
+++ b/SDL_GetError.mediawiki
@@ -22,7 +22,7 @@ if (SDL_Init( SDL_INIT_EVERYTHING ) < 0) {
     printf("SDL_Init failed: %s\n", SDL_GetError());
 }
 ```
-Note: Although this example uses [[SDL_Init]](), [[SDL_GetError]]() provides an error message for any failed SDL operation.
+Note: Although this example uses [[SDL_Init]](), [[SDL_GetError]]() provides an error message for any failed SDL operation which supports error reporting, see the wiki page for each particular SDL function.
 
 == Remarks ==
 It is possible for multiple errors to occur before calling [[SDL_GetError]]().  Only the last error is returned.
