--- a/SDL_MouseWheelEvent.mediawiki
+++ b/SDL_MouseWheelEvent.mediawiki
@@ -35,7 +35,7 @@ You can add your code example here
 
 An SDL_MOUSEWHEEL event occurs whenever a user moves the mouse wheel.
 
-Movements to the left generate negative '''x''' values and to the right generate positive '''x''' values.  Movements up (scroll forward) generate negative '''y''' values and down (scroll backward) generate positive '''y''' values.  <<Color2(green,This information needs to be verified.)>>
+Movements to the left generate negative '''x''' values and to the right generate positive '''x''' values.  Movements up (scroll forward) generate negative '''y''' values and down (scroll backward) generate positive '''y''' values.  <<Color2(green,This information needs to be verified.)>> <<Color2(red, The information is correct for Windows and Mac Os X. Other platforms not checked.)>>
 
 == Related Enumerations ==
 :[[SDL_EventType]]
