--- a/SDL_CreateWindow.mediawiki
+++ b/SDL_CreateWindow.mediawiki
@@ -48,8 +48,6 @@ Returns the window that was created or NULL on failure; call [[SDL_GetError]]() 
 #include <SDL2/SDL.h>
 #include <iostream>
 
-using namespace std;
-
 int main(int argc, char* argv[]){
 
   SDL_Init(SDL_INIT_VIDEO);   // Initialize SDL2
@@ -69,7 +67,7 @@ int main(int argc, char* argv[]){
   // Check that the window was successfully made
   if(pWindow==NULL){   
     // In the event that the window could not be made...
-    cout << "Could not create window: " << SDL_GetError() << '\n';
+    std::cout << "Could not create window: " << SDL_GetError() << '\n';
     return 1;
   }
   
