ops, copy/paste error

--- a/SDL_GL_UnbindTexture.mediawiki
+++ b/SDL_GL_UnbindTexture.mediawiki
@@ -1,6 +1,6 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-= SDL_GL_BindTexture =
+= SDL_GL_UnbindTexture =
 Use this function to bind an OpenGL/ES/ES2 texture to the current context for use with when rendering OpenGL primitives directly.
 
 
