--- a/SDL_GL_BindTexture.mediawiki
+++ b/SDL_GL_BindTexture.mediawiki
@@ -6,7 +6,7 @@ Use this function to bind an OpenGL/ES/ES2 texture to the current context for us
 
 == Syntax ==
 ```c++
-int SDL_GL_BindTexture(SDL_Texture *texture, float *texw, float *texh);
+int SDL_GL_BindTexture(SDL_Texture *texture, float *texw, float *texh)
 ```
 == Function Parameters ==
 {|
