--- a/SDL_LockTexture.mediawiki
+++ b/SDL_LockTexture.mediawiki
@@ -6,7 +6,7 @@
 
 
 = SDL_LockTexture =
-Use this function to lock a portion of the texture for pixel access.''' Warning: See''' [http://bugzilla.libsdl.org/show_bug.cgi?id=1586 Bug No. 1586] ''' before using SDL_LockTexture() and''' [[SDL_UnlockTexture]]().
+Use this function to lock a portion of the texture for '''write-only''' pixel access.
 
 
 == Syntax ==
@@ -40,7 +40,7 @@ Returns 0 on success or a negative error code if the texture is not valid or was
 You can add your code example here
 ```
 == Remarks ==
-The pixels made available for editing don't necessarily contain the old data.  This is specifically ''not'' guaranteed.
+As an optimization, the pixels made available for editing don't necessarily contain the old texture data. This is a write-only operation, and if you need to keep a copy of the texture data you should do that at the application level.
 
 You must use [[SDL_UnlockTexture]]() to unlock the pixels and apply any changes.
 
