--- a/SDL_GetCPUCount.mediawiki
+++ b/SDL_GetCPUCount.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_GetCPUCount =
 Use this function to return the number of CPU cores available.
@@ -10,19 +9,13 @@ Use this function to return the number of CPU cores available.
 ```c++
 int SDL_GetCPUCount(void)
 ```
-
 == Return Value ==
-Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
+Returns the total number of logical CPU cores. On CPUs that include technologies such as hyperthreading, the number of logical cores may be more than the number of physical cores.
 
-== Code Examples ==
-```c++
-You can add your code example here
+== Code Example ==
 ```
-
-== Remarks ==
-''You can add useful comments here''
-
+printf( "Number of logical CPU cores: %d\n", SDL_GetCPUCount() );
+```
 == Related Functions ==
-
 ----
 [[CategoryAPI]], [[CategoryCPU]]
