--- a/SDL_CreateWindow.mediawiki
+++ b/SDL_CreateWindow.mediawiki
@@ -52,20 +52,20 @@ int main(int argc, char* argv[]){
 
   SDL_Init(SDL_INIT_VIDEO);   // Initialize SDL2
   
-  SDL_Window *pWindow;        // Declare a pointer to an SDL_Window
+  SDL_Window *window;        // Declare a pointer to an SDL_Window
   
   // Create an application window with the following settings:
-  pWindow = SDL_CreateWindow( 
-    "An SDL2 window",         //    const char* title
-    SDL_WINDOWPOS_UNDEFINED,  //    int x: initial x position
-    SDL_WINDOWPOS_UNDEFINED,  //    int y: initial y position
-    640,                      //    int w: width, in pixels
-    480,                      //    int h: height, in pixels
-    SDL_WINDOW_SHOWN          //    Uint32 flags: window options, see below
+  window = SDL_CreateWindow( 
+    "An SDL2 window",                  //    window title
+    SDL_WINDOWPOS_UNDEFINED,           //    initial x position
+    SDL_WINDOWPOS_UNDEFINED,           //    initial y position
+    640,                               //    width, in pixels
+    480,                               //    height, in pixels
+    SDL_WINDOW_SHOWN|SDL_WINDOW_OPENGL //    flags - see below
   );
   
   // Check that the window was successfully made
-  if(pWindow==NULL){   
+  if(window==NULL){   
     // In the event that the window could not be made...
     std::cout << "Could not create window: " << SDL_GetError() << '\n';
     return 1;
@@ -76,9 +76,9 @@ int main(int argc, char* argv[]){
   SDL_Delay(3000);  // Pause execution for 3000 milliseconds, for example
   
   // Close and destroy the window
-  SDL_DestroyWindow(pWindow); 
+  SDL_DestroyWindow(window); 
    
-  // Uninitialize SDL2 and exit the program
+  // Clean up
   SDL_Quit(); 
   return 0;   
  
