--- a/MigrationGuide.mediawiki
+++ b/MigrationGuide.mediawiki
@@ -84,7 +84,7 @@ You'll note that there are two kinds of key numbers:
 * [[SDL_Keycode]] (previously SDLKey): key codes, using SDL_Keycode's SDLK constants; note that SDLK_LAST disappeared, because new values cover most of 32bits. Keys associated with printable characters are compatible with Unicode UTF16.
 * [[SDL_Scancode]]: scan codes, representing layout-independent key locations
 
-SDLMod is now SDL_Mod.
+SDLMod is now [[SDL_Keymod]].
 
 === Functions ===
 
