--- a/SDL_GetModState.mediawiki
+++ b/SDL_GetModState.mediawiki
@@ -8,11 +8,11 @@ Use this function to get the current key modifier state for the keyboard.
 
 == Syntax ==
 ```c++
-SDL_Mod SDL_GetModState(void)
+SDL_Keymod SDL_GetModState(void)
 ```
 
 == Return Value ==
-^Returns an OR'd combination of the modifier keys for the keyboard. See [[SDL_Mod]] for details.^  ???
+^Returns an OR'd combination of the modifier keys for the keyboard. See [[SDL_Keymod]] for details.^  ???
 
 == Code Examples ==
 ```c++
@@ -25,7 +25,7 @@ You can add your code example here
 == See Also ==
 :[[SDL_GetKeyboardState]]
 :[[SDL_SetModState]]
-:[[SDL_Mod]]
+:[[SDL_Keymod]]
 
 ----
 [[CategoryAPI]], [[CategoryKeyboard]]
