--- a/MigrationGuide.mediawiki
+++ b/MigrationGuide.mediawiki
@@ -81,16 +81,16 @@ SDL_PeepEvents(&event, 1, SDL_GETEVENT, SDL_MOUSEBUTTONDOWN, SDL_MOUSEBUTTONDOWN
 === Types ===
 
 You'll note that there are two kinds of key numbers:
-* [[SDL_Keycode]] (previously SDLKey): key codes, using SDL_Keycode's SDLK constants; note that SDLK_LAST disappeared, because new values cover most of 32bits. Keys associated with printable characters are compatible with Unicode UTF16.
+* [[SDL_Keycode]] (previously ```SDLKey```): key codes, using SDL_Keycode's SDLK constants; note that SDLK_LAST disappeared, because new values cover most of 32bits. Keys associated with printable characters are compatible with Unicode UTF16.
 * [[SDL_Scancode]]: scan codes, representing layout-independent key locations
 
-SDLMod is now [[SDL_Keymod]].
+```SDLMod``` is now [[SDL_Keymod]].
 
 === Functions ===
 
 There is now a dedicated API for textual input (e.g. to enter a small text, rather than combining keys); check [[Tutorials/TextInput]] for an introduction.
 
-SDL_GetKeyState has been renamed to [[SDL_GetKeyboardState]].
+```SDL_GetKeyState``` has been renamed to [[SDL_GetKeyboardState]].
 
 == Audio ==
 
