--- a/SDL_JoystickName.mediawiki
+++ b/SDL_JoystickName.mediawiki
@@ -8,13 +8,13 @@ Use this function to get the implementation dependent name of a joystick.
 
 == Syntax ==
 ```c++
-const char* SDL_JoystickName(int device_index)
+const char* SDL_JoystickName(SDL_Joystick *joystick)
 ```
 
 == Function Parameters ==
 {|
-|'''device_index'''
-|^the index of the joystick to query^ ''-or-'' *the N'th joystick on the system*
+|'''joystick'''
+|^the [[SDL_Joystick]] obtained from [[SDL_JoystickOpen]] 
 |}
 
 == Return Value ==
@@ -25,18 +25,22 @@ Returns the name of the selected joystick.  If no name can be found, this functi
 ```c++
 /* Print the names of all attached joysticks */
 int num_joy, i;
-num_joy=SDL_NumJoysticks();
+num_joy = SDL_NumJoysticks();
 printf("%d joysticks found\n", num_joy);
-for(i=0;i<num_joy;i++)
-  printf("%s\n", SDL_JoystickName(i));
+for(i = 0; i < num_joy; i++)
+{
+  SDL_Joystick *joystick = SDL_JoystickOpen(i);
+  printf("%s\n", SDL_JoystickName(joystick));
+}
 ```
 *
 
 == Remarks ==
-This can be called before any joysticks are opened. 
+This can be called before any joysticks are opened.
 
 == Related Functions ==
 :[[SDL_JoystickOpen]] *
+:[[SDL_JoystickNameForIndex]] *
 
 ----
 [[CategoryAPI]], [[CategoryJoystick]]
