--- a/SDL_LogMessageV.mediawiki
+++ b/SDL_LogMessageV.mediawiki
@@ -3,9 +3,7 @@
 '''DRAFT'''
 
 = SDL_LogMessageV =
-Use this function to log a message with the specified category and priority.
-
-<<Color2(green,Should this description be adjusted to more clearly differentiate this function from [[SDL_LogMessage]]()?)>>
+Use this function to log a message with the specified category and priority.  This version of [[SDL_LogMessage]] uses a stdarg variadic argument list.
 
 
 == Syntax ==
@@ -41,8 +39,6 @@ You can add your code example here
 <<Include(SDL_LogPriority, , , from="Start Include here.", to="##End Include here.")>>
 
 <<Color2(green,Should there be some reference to [[SDL_LOG_CATEGORY]] for '''category'''?)>>
-
-''You can add useful comments here''
 
 == Related Functions ==
 :[[SDL_Log]]
