--- a/SDL_GetModState.mediawiki
+++ b/SDL_GetModState.mediawiki
@@ -12,7 +12,7 @@ SDL_Keymod SDL_GetModState(void)
 ```
 
 == Return Value ==
-^Returns an OR'd combination of the modifier keys for the keyboard. See [[SDL_Keymod]] for details.^  ???
+Returns an OR'd combination of the modifier keys for the keyboard. See [[SDL_Keymod]] for details.
 
 == Code Examples ==
 ```c++
