SDL_RenderCopy -> SDL_RenderCopyEx

--- a/SDL_RenderCopyEx.mediawiki
+++ b/SDL_RenderCopyEx.mediawiki
@@ -7,7 +7,7 @@ Use this function to copy a portion of the texture to the current rendering targ
 
 == Syntax ==
 ```c++
-int SDL_RenderCopy(SDL_Renderer*   renderer,
+int SDL_RenderCopyEx(SDL_Renderer*   renderer,
                    SDL_Texture*    texture,
                    const SDL_Rect* srcrect,
                    const SDL_Rect* dstrect,
