Changed code sample to use C instead of C++.

--- a/SDL_GetWindowWMInfo.mediawiki
+++ b/SDL_GetWindowWMInfo.mediawiki
@@ -25,14 +25,11 @@ Returns SDL_TRUE if the function is implemented and the <code>version</code> mem
 
 == Code Examples ==
 ```c++
-#include <SDL2/SDL.h>
-#include <SDL2/SDL_syswm.h>
-#include <iostream>
+#include "SDL.h"
+#include "SDL_syswm.h"
 
-using std::cout;
 
-int main(int argc, char* argv[]){
-
+int main(int argc, char *argv[]) {
   SDL_Init(0);
   SDL_Window* window = SDL_CreateWindow("",0,0,0,0,SDL_WINDOW_HIDDEN);
   
@@ -40,24 +37,27 @@ int main(int argc, char* argv[]){
   
   SDL_VERSION(&info.version); // initialize info structure with SDL version info
   
-  if(SDL_GetWindowWMInfo(window,&info)){ // the call returns true on success
+  if(SDL_GetWindowWMInfo(window,&info)) { // the call returns true on success
     // success
-    cout << "This program is running SDL version " 
-      << (int)info.version.major << "."
-      << (int)info.version.minor << "."
-      << (int)info.version.patch << " on ";
-    switch(info.subsystem){
-      case SDL_SYSWM_UNKNOWN:   cout << "an unknown system!";     break;
-      case SDL_SYSWM_WINDOWS:   cout << "Microsoft Windows(TM)";  break;
-      case SDL_SYSWM_X11:       cout << "X Window System";        break;
-      case SDL_SYSWM_DIRECTFB:  cout << "DirectFB";               break;
-      case SDL_SYSWM_COCOA:     cout << "Apple OS X";             break;
-      case SDL_SYSWM_UIKIT:     cout << "UIKit";                  break;
+    const char *subsystem = "an unknown system!";
+    switch(info.subsystem) {
+      case SDL_SYSWM_UNKNOWN:   break;
+      case SDL_SYSWM_WINDOWS:   subsystem = "Microsoft Windows(TM)";  break;
+      case SDL_SYSWM_X11:       subsystem = "X Window System";        break;
+      case SDL_SYSWM_DIRECTFB:  subsystem = "DirectFB";               break;
+      case SDL_SYSWM_COCOA:     subsystem = "Apple OS X";             break;
+      case SDL_SYSWM_UIKIT:     subsystem = "UIKit";                  break;
     }
+
+    SDL_Log("This program is running SDL version %d.%d.%d on %s\n", 
+        (int)info.version.major,
+        (int)info.version.minor,
+        (int)info.version.patch,
+        subsystem);
     
   } else {
     // call failed
-    cout << "Couldn't get window information: " << SDL_GetError();
+    SDL_LogError(SDL_LOG_CATEGORY_ERROR, "Couldn't get window information: %s\n", SDL_GetError());
   }
   
   SDL_DestroyWindow(window);
