--- a/CategoryInit.mediawiki
+++ b/CategoryInit.mediawiki
@@ -10,7 +10,7 @@
 
 == Introduction ==
 
-Functions in this category are used to set up SDL 1.3 for use and generally have global effects in your program.
+Functions in this category are used to set up SDL for use and generally have global effects in your program.
 
 === Introduction to Initialization ===
 
